fixed btn letter-spacing from 0.02rem to 0.2rem

--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ body {
   line-height: 4.5rem;
   font-size: inherit;
   font-weight: bold;
-  letter-spacing: 0.02rem;
+  letter-spacing: 0.2rem;
   cursor: pointer;
   transition: background-color 0.3s;
   text-transform: uppercase;
