--- a/sass/main.scss
+++ b/sass/main.scss
@@ -108,7 +108,7 @@ body {
       line-height: 4.5rem;
       font-size: inherit;
       font-weight: bold;
-      letter-spacing: 0.02rem;
+      letter-spacing: 0.2rem;
       cursor: pointer;
       transition: background-color 0.3s;
       text-transform: uppercase;
